Add another click function that adds an address section.

--- a/index.html
+++ b/index.html
@@ -22,23 +22,37 @@
             <label for="new-last-name">Last Name</label>
             <input type="text" class="form-control" id="new-last-name">
           </div>
-          <div class="form-group">
-            <label for="new-street">Street</label>
-            <input type="text" class="form-control" id="new-street">
+          <!-- <div class="new-address"> -->
+            <div class="form-group">
+              <label for="new-street">Street</label>
+              <input type="text" class="form-control" id="new-street">
+            </div>
+            <div class="form-group">
+              <label for="new-city">City</label>
+              <input type="text" class="form-control" id="new-city">
+            </div>
+            <div class="form-group">
+              <label for="new-state">State</label>
+              <input type="text" class="form-control" id="new-state">
+            </div>
+          <!-- </div> -->
+          <div class="output">
+            <div class="form-group">
+              <label for="new-street">Street</label>
+              <input type="text" class="form-control" id="new-street">
+            </div>
+            <div class="form-group">
+              <label for="new-city">City</label>
+              <input type="text" class="form-control" id="new-city">
+            </div>
+            <div class="form-group">
+              <label for="new-state">State</label>
+              <input type="text" class="form-control" id="new-state">
+            </div>
           </div>
-          <div class="form-group">
-            <label for="new-city">City</label>
-            <input type="text" class="form-control" id="new-city">
-          </div>
-          <div class="form-group">
-            <label for="new-state">State</label>
-            <input type="text" class="form-control" id="new-state">
-          </div>
-
-
-          <button type="submit" class="btn">Add</button>
         </form>
-        <!-- <button type="click" class="btn btn-primary id="button">Another address</button> -->
+        <button type="click" class="btn btn-primary" id="button">Another address</button>
+        <button type="click" class="btn" id="button2">Add</button>
         <h2>Contacts:</h2>
         <ul id="contacts">
         </ul>
@@ -53,12 +67,12 @@
           <p>
             Last name: <span class="last-name"></span>
           </p>
-    <p>
-      Addresses: <span class="address-name"></span>
-    </p>
+          <p>
+            Addresses: <span class="address-name"></span>
+          </p>
 
+        </div>
       </div>
     </div>
-  </div>
-</body>
-</html>
+  </body>
+  </html>
