--- a/index.html
+++ b/index.html
@@ -22,37 +22,27 @@
             <label for="new-last-name">Last Name</label>
             <input type="text" class="form-control" id="new-last-name">
           </div>
-          <!-- <div class="new-address"> -->
-            <div class="form-group">
-              <label for="new-street">Street</label>
-              <input type="text" class="form-control" id="new-street">
-            </div>
-            <div class="form-group">
-              <label for="new-city">City</label>
-              <input type="text" class="form-control" id="new-city">
-            </div>
-            <div class="form-group">
-              <label for="new-state">State</label>
-              <input type="text" class="form-control" id="new-state">
-            </div>
-          <!-- </div> -->
-          <div class="output">
-            <div class="form-group">
-              <label for="new-street">Street</label>
-              <input type="text" class="form-control" id="new-street">
-            </div>
-            <div class="form-group">
-              <label for="new-city">City</label>
-              <input type="text" class="form-control" id="new-city">
-            </div>
-            <div class="form-group">
-              <label for="new-state">State</label>
-              <input type="text" class="form-control" id="new-state">
+          <div id="new-addresses">
+            <div class="new-address">
+              <div class="form-group">
+                <label for="new-street">Street</label>
+                <input type="text" class="form-control new-street">
+              </div>
+              <div class="form-group">
+                <label for="new-city">City</label>
+                <input type="text" class="form-control new-city">
+              </div>
+              <div class="form-group">
+                <label for="new-state">State</label>
+                <input type="text" class="form-control new-state">
+              </div>
             </div>
           </div>
+          <span class="btn btn-primary" id="add-address">Another address</span>
+          <button type="submit" class="btn" id="button2">Add</button>
         </form>
-        <button type="click" class="btn btn-primary" id="button">Another address</button>
-        <button type="click" class="btn" id="button2">Add</button>
+
+
         <h2>Contacts:</h2>
         <ul id="contacts">
         </ul>
@@ -68,11 +58,13 @@
             Last name: <span class="last-name"></span>
           </p>
           <p>
-            Addresses: <span class="address-name"></span>
+            Addresses:
           </p>
-
+          <ul id="addresses">
+          </ul>
         </div>
       </div>
     </div>
-  </body>
-  </html>
+  </div>
+</body>
+</html>
