Add address type to the webpage.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           </div>
           <div id="new-addresses">
             <div class="new-address">
+              <h5>Address type</h5>
+              <select class="form-control" id="address-type">
+                <option>Work</option>
+                <option>Home</option>
+                <option>Other</option>
+              </select>
               <div class="form-group">
                 <label for="new-street">Street</label>
                 <input type="text" class="form-control new-street">
